# winterrb

./: .gitignore  LICENSE  README.md  pyproject.toml  winterdrb_pytorch.ipynb
.github/workflows/: continuous_integration.yml
models/: winterrb_v1_0_0_weights.pth  winterrb_v2_0_0_weights.pth  xgboost_v2.0.0.json
winterrb/: classifications.py  dataset.py  model.py  paths.py  pick_alerts.py  tree.py  utils.py
