[build-system]
requires = ["setuptools>=45", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "winterrb"
version = "1.0.0"
description = ""
authors = [
    {name = "Aswin Suresh"},
    {name = "Robert Stein", email="rdstein@caltech.edu"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Science/Research',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dependencies = [
    "astropy",
    "fastavro",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "torch",
    "torchinfo",
    "tqdm",
    "scikit-learn",
    "scipy",
    "tqdm",
]
[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/winter-telescope/winterrb"

[tool.setuptools]
packages = ["winterrb"]

[tool.isort]
profile = "black"
